<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.bitgray.bitgraytest.fragments.PhotoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnCameraPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@color/colorAccent"
                android:padding="15dp"
                android:text="@string/take_photo"
                android:textColor="@color/colorWhite" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imageThumbnailPhoto"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/empty_image"
                    android:visibility="visible" />

                <LinearLayout
                    android:id="@+id/containerPhotoLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/inputLayoutLatitudePhoto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        android:visibility="gone">

                        <EditText
                            android:id="@+id/latitudePhoto"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:editable="false"
                            android:hint="@string/latitude"
                            android:visibility="gone" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/inputLayoutLongitudePhoto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        android:visibility="gone">

                        <EditText
                            android:id="@+id/longitudePhoto"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:editable="false"
                            android:hint="@string/longitude"
                            android:visibility="gone" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputLayoutTittlePhoto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:visibility="gone">

                    <EditText
                        android:id="@+id/tittlePhoto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tittle"
                        android:visibility="gone" />
                </android.support.design.widget.TextInputLayout>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnSavePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_save_white_24dp"
        android:visibility="gone" />

</android.support.design.widget.CoordinatorLayout>